# nail

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  update_release_table.py
examples/: mmore.rs  mmpf.rs  nw.rs
fixtures/: PF00001.matches.fa  PF00001.sto  a.seeds  query.fa  query.hmm  target.fa
libnail/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
libnail/benches/: cloud_search.rs  forward_backward.rs
libnail/src/: alphabet.rs  lib.rs  util.rs  viz.rs
libnail/src/align/: backward.rs  backward_bounded.rs  cloud_search.rs  cloud_search_backward.rs  cloud_search_common.rs  cloud_search_forward.rs  forward.rs  forward_bounded.rs  mod.rs  needleman_wunsch.rs  optimal_accuracy.rs  optimal_accuracy_bounded.rs  posterior.rs  posterior_bounded.rs  scoring.rs  tests.rs  traceback.rs  traceback_bounded.rs
libnail/src/align/bounded/: cloud_search_backward.rs  cloud_search_forward.rs  forward_bounded.rs  mod.rs  optimal_accuracy_bounded.rs  posterior_bounded.rs  scoring.rs  traceback_bounded.rs
libnail/src/align/bounded/structs/: bound.rs  row_bounds.rs
libnail/src/align/naive/: mod.rs  null2.rs  optimal_accuracy.rs
libnail/src/align/structs/: alignment.rs  anti_diagonal_bounds.rs  cloud.rs  cloud_bound.rs  cloud_matrix.rs  cloud_search_params.rs  dp_matrix.rs  dp_matrix_flat.rs  dp_matrix_sparse.rs  mod.rs  row_bounds.rs  seed.rs  trace.rs
libnail/src/output/: mod.rs  output_standard.rs  output_tabular.rs
libnail/src/structs/: dp_matrix_flat.rs  hmm.rs  mod.rs  profile.rs  sequence.rs  trace.rs
nail/: CHANGELOG.md  Cargo.toml  README.md
nail/fixtures/soda/: cloud.html  cloud.js
nail/mat/: blosum62.mat
nail/src/: args.rs  cli.rs  database.rs  dev.rs  extension_traits.rs  id.rs  io.rs  main.rs  mmseqs.rs  search.rs  seed.rs  stats.rs  util.rs  viz.rs
nail/src/io/: database.rs  fasta.rs  impl_rayon.rs  index.rs  mod.rs  p7hmm.rs  rayon.rs  seeds.rs  util.rs
nail/src/pipeline/: align.rs  align_stage.rs  align_step.rs  cloud_stage.rs  cloud_step.rs  mod.rs  output_stage.rs  output_step.rs  prep.rs  search.rs  seed.rs  seed_stage.rs  seed_step.rs
nail/src/pipeline/align/: mod.rs  serial_bounded.rs  serial_full.rs  threaded_bounded.rs  threaded_full.rs
src/: alphabet.rs  lib.rs  main.rs  output.rs  timing.rs  util.rs  viz.rs
src/align/: backward.rs  forward.rs  mod.rs  needleman_wunsch.rs  optimal_accuracy.rs  posterior.rs  traceback.rs
src/align/bounded/: backward_bounded.rs  cloud_search.rs  cloud_search_backward.rs  cloud_search_common.rs  cloud_search_forward.rs  forward_bounded.rs  mod.rs  optimal_accuracy_bounded.rs  posterior_bounded.rs  scoring.rs  traceback_bounded.rs
src/align/bounded/structs/: bound.rs  cloud_debug_annotations.rs  cloud_matrix.rs  cloud_matrix_sparse.rs  cloud_search_params.rs  cloud_seed.rs  dp_matrix_sparse.rs  mod.rs  row_bound_params.rs  row_bounds.rs  seed.rs
src/align/naive/: backward.rs  forward.rs  mod.rs  optimal_accuracy.rs  posterior.rs  traceback.rs
src/alignment/: forward.rs  mod.rs  posterior.rs  traceback.rs
src/output/: mod.rs  output_debug.rs  output_standard.rs  output_tabular.rs  path_buf_ext.rs
src/pipelines/: bounded.rs  mod.rs  naive.rs
src/structs/: alignment.rs  dp_matrix.rs  dp_matrix_flat.rs  hmm.rs  mod.rs  profile.rs  sequence.rs  trace.rs
