[package]
name = "nale"
version = "0.1.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"

[lib]
name = "nale"
path = "./src/lib.rs"

[dependencies]
rand = "0.8.5"
seq_io = "0.3.1"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
regex = "1.7.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
once_cell = "1.17.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
