[package]
name = "nale"
version = "0.1.1"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/nale"
description = "Nale is a library that performs profile Hidden Markov Model (PHMM) biological sequence alignment."

[lib]
name = "nale"
path = "./src/lib.rs"

[dependencies]
seq_io = "0.3.1"
phf = { version = "0.11", features = ["macros"] }
regex = "1.7.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
