[package]
name = "libnail"
version = "0.1.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/nail"
description = "Libnail is a library that performs profile Hidden Markov Model (PHMM) biological sequence alignment."

[features]
default = ["debug"]
debug = ["dep:image"]

[lib]
name = "libnail"
path = "./src/lib.rs"

[dependencies]
seq_io = "0.3.1"
phf = { version = "0.11", features = ["macros"] }
regex = "1.7.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
image = { version = "0.25.1" , optional = true }

[dev-dependencies]
pretty_assertions = "1.4"
