[package]
name = "nail"
version = "0.1.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/nail"
description = "nail is an alignment inference tool"
exclude = [
    "fixtures/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
libnail = { path = "../libnail", version = "0.1.0" }
anyhow = "1.0.66"
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
rayon = "1.7.0"
thread_local = "1.1.7"
