[package]
name = "nail"
version = "0.4.0"
authors = ["Jack Roddy <jack.w.roddy@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/TravisWheelerLab/nail"
description = "nail is an alignment inference tool"
exclude = [
    "fixtures/",
]

[features]
default = []
debug = ["libnail/debug"]
jemalloc = ["jemallocator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jemallocator = { version = "0.3", optional = true }
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
libnail = { path = "../libnail", version = "0.3.0" }
anyhow = "1.0.66"
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
rayon = "1.7.0"
thread_local = "1.1.7"
dyn-clone = "1.0.17"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
derive_builder = "0.20.1"
indexmap = "2.7.0"
colored = "3.0.0"
color-backtrace = "0.7.0"
